examples/test/testpolicy7934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7934
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key8: value29
      key46: value38
      key48: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value35
          key46: value2
      podSelector:
        matchLabels:
          key29: value6
          key22: value46
